Controller-Support-Info: add HWFeature specific Notes
